--- a/app/templates/session.html
+++ b/app/templates/session.html
@@ -1,64 +1,23 @@
-<!doctype html>
+{% extends 'base.html' %}
 
-<head>
-  <meta charset="utf-8">
-  <title>{% block title %}{% endblock %}</title>
+{% block styles %}
+<link type="text/css" rel="stylesheet" href="/static/css/style.css" />
+{% endblock %}
 
-  <!-- meta -->
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <!-- /meta -->
-
-  <!-- styles -->
-  <link type="text/css" rel="stylesheet" href="/static/css/bootstrap.css">
-  <link type="text/css" rel="stylesheet" href="/static/css/style.css" />
-  <!-- /styles -->
-
-  <!-- favicons -->
-  <link rel="shortcut icon" href="/static/ico/favicon.png">
-  <!-- /favicons -->
-
-</head>
-
-<body>
-
-  <!-- Begin page content -->
-  <main id="content" role="main" class="container">
-
-    <div class="row">
-      <div class="col">
-        <h1>Enter Channel</h1>
-        <form action="" method="post" novalidate>
-          {{ form.hidden_tag() }}
-          <p>
-            {{ form.username.label }}<br>
-            {{ form.username(size=32) }}
-          </p>
-          <p>
-            {{ form.submit() }}</p>
-          </p>
-        </form>
-      </div>
-    </div>
-    </div>
-
-  </main>
-
+{% block content %}
+<div class="row">
+  <div class="col">
+    <h1>Enter Channel</h1>
+    <form action="" method="post" novalidate>
+      {{ form.hidden_tag() }}
+      <p>
+        {{ form.username.label }}<br>
+        {{ form.username(size=32) }}
+      </p>
+      <p>
+        {{ form.submit() }}</p>
+      </p>
+    </form>
   </div>
-
-  <!-- scripts -->
-  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script>
-    window.jQuery || document.write(
-      '<script type="text/javascript" src="/static/js/libs/jquery-1.11.1.min.js"><\/script>')
-  </script>
-  <script type="text/javascript" src="/static/js/bootstrap.js" defer></script>
-  <!-- <script type="text/javascript" src="/static/js/plugins.js" defer></script>
-  <script type="text/javascript" src="/static/js/script.js" defer></script> -->
-  {% block scripts %}{% endblock %}
-  <!-- /scripts -->
-
-</body>
-
-</html>
+</div>
+{% endblock %}
